<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
   android:orientation="vertical" >

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="100" >
    
    <TextView
        android:id="@+id/tDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_weight="70"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:ems="10"
        android:hint="@string/fill" />
        
      
    
       
</LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="100" >
    
    <TextView
        android:id="@+id/tName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_weight="70"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:ems="10"
        android:hint="@string/fill" />
    
       
</LinearLayout>
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="100" >
    
    <TextView
        android:id="@+id/tCharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/charge"
        android:layout_weight="70"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/charge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:ems="10"
        android:hint="@string/fill" />
    
       
</LinearLayout>
     
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="100" >
    
    <TextView
        android:id="@+id/tTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_weight="70"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:ems="10"
        android:hint="@string/fill"
        android:focusable="false" />
    
       
</LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="100" >
       
         <Button
             android:id="@+id/bViewExtra"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="50"
             android:text="@string/view" />
         <Button
             android:id="@+id/bUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="50"
             android:text="@string/update" />
     </LinearLayout>
</LinearLayout>