<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.67"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/tMinDiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:text="@string/mindiet"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/minDiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:ems="10"
            android:hint="@string/fill" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.39"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/tDietCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:text="@string/dietcounter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dietCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:ems="10"
            android:hint="@string/fill" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.57"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/tDDD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:text="@string/doublediet"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dDD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:ems="10"
            android:hint="per month" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.50"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/tServiceCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:text="@string/servicecharge"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/serviceCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:ems="10"
            android:hint="@string/fill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.60"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/tDietRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dietrate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="45" />

        <EditText
            android:id="@+id/dietRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fill"
            android:layout_weight="55" >

            
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.06"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/tTotalExtra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="45"
            android:text="@string/totalex"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/totalExtra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="55"
            android:ems="10"
            android:hint="@string/fill" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:orientation="horizontal"
        android:weightSum="90" >

        <Button
            android:id="@+id/bSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>